--- a/projetIntegration/.classpath
+++ b/projetIntegration/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="/home/nico/Bureau/librairies/JAVA/jgrapht.jar"/>
+	<classpathentry kind="lib" path="/Users/admin/Java external libs/jgrapht.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
